--- a/less/assistant.less
+++ b/less/assistant.less
@@ -301,7 +301,7 @@
     &::before {
         content: url('../img/icons/arrows-asisstent-top.svg');
         position: absolute;
-        top: -4px;
+        top: -14px;
         left: 50%;
         opacity: 0;
         transform: translate(-50%, 0);
@@ -311,7 +311,7 @@
         content: url('../img/icons/arrows-asisstent-bottom.svg');
         position: absolute;
         left: 50%;
-        bottom: -7px;
+        bottom: -18px;
         transform: translate(-50%, 0);
         opacity: 0;
       }
@@ -364,16 +364,16 @@
         font-weight: bold;
         color:#0031C4;
         &:hover {
+            left: 18px;
             color: #343434;
             border-bottom: 2px solid #343434;
         }
         &::before {
             content: url(../img/icons/menu-item-arr-decor.svg);
-            top: 50%;
-            transform: translate(-50%, -48%);
+            top: 0;
             display: none;
             position: absolute;
-            left: -12.5px;
+            left: -18px;
         }
      }
  }
@@ -500,7 +500,7 @@
             font-weight: bold;
             font-size: 18px;
             line-height: 133.3%;
-            color: #0066FF;
+            color: #00369C;
 
         }
        
