--- a/less/media.less
+++ b/less/media.less
@@ -307,7 +307,9 @@
 @media screen and (max-width: 1200px) {
 
         .header-slider{
-        
+            &__mail-title {
+                margin-top: 20px;
+            }
         &__content {
             padding-top: 20px;
         }
@@ -316,6 +318,7 @@
         }
     }
     .header {
+        padding: 5px 0 10px;
         &__nav {
             display: none;
         }
@@ -438,8 +441,14 @@
 
 
 @media screen and (max-width: 1100px){
+
+    .header-slider{
+        .arrow-decorate--left {
+            display: none;
+        }
+    }
     .header-assistent-slider {
-        left: 11%;
+        left: 14%;
     }
     .opacity {
         opacity: 1;
@@ -771,13 +780,12 @@
         opacity: 1;
     }
  
-
     .header-slider__mail-title {
         font-size: 45px;
     }
 
     .header-slider__buttons {
-        top: 40px;
+        top: 15px;
     }
     .assistent-slider-wrap {
         max-width: 590px;
@@ -803,14 +811,14 @@
     }
   
     .connection-info__btn--tablet,
-    .connection-info__item--search,
-    .connection-info--tablet-main,
-    .social-links-list,
+    // .connection-info__item--search,
+    // .connection-info--tablet-main,
+    // .social-links-list,
     .social-nav {
        display: none;
    }
 
-    .social-links-list--mobile,
+    // .social-links-list--mobile,
     .social-links-list--menu {
         display: flex;
        
