add drop-down menu arrow

--- a/css/assistans-media.css
+++ b/css/assistans-media.css
@@ -59,6 +59,9 @@
   .header-slider__block {
     margin-top: 80px;
   }
+  .header--sticky .logo--header img {
+    position: static;
+  }
   .header-decorate {
     right: 55%;
     top: -156%;
