--- a/less/assistans-media.less
+++ b/less/assistans-media.less
@@ -76,6 +76,10 @@
             margin-top: 80px;
         }
     }
+
+    .header--sticky .logo--header img {
+        position: static;
+    }
     .header-decorate {
         right: 55%;
         top: -156%;
