--- a/css/style.css
+++ b/css/style.css
@@ -439,6 +439,9 @@ details > summary::-webkit-details-marker {
 summary {
   cursor: pointer;
 }
+details[open] .summary-arrow {
+  transform: rotate(180deg);
+}
 .adaptive-menu {
   position: absolute;
   padding: 10px 35px;
