--- a/less/media.less
+++ b/less/media.less
@@ -1379,6 +1379,16 @@
 }
 
 
+@media screen and (max-width: 650px) {
+    .connection-info--tablet-main,
+    .social-links-list {
+        display: none;
+    }
+    .social-links-list--mobile {
+        display: flex;
+    }
+}
+
 
 @media screen and (max-width: 570px){
 
