--- a/less/media.less
+++ b/less/media.less
@@ -840,7 +840,7 @@
     
 
     .connection-info__btn{
-       padding: 7px;
+       padding: 7px 15px;
        bottom: -31px;
        right: 10px
     }
@@ -1230,7 +1230,7 @@
         display: none;
     }
     .universities{
-        margin: 0px 0 40px;
+        margin: 0;
         padding-top: 30px;
         &::before {
             content: "";
@@ -1656,6 +1656,12 @@
         &__list {
             margin-right: 0;
         }
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .connection-info__btn{
+        padding: 7px;
     }
 }
 
