--- a/less/media.less
+++ b/less/media.less
@@ -1482,7 +1482,7 @@
         margin-left: 0;
     }
     .adaptive-menu{
-        padding: 10px 17px;
+        padding: 10px 17px 26px;
         &__info {
             margin-bottom: 10px;
             padding-bottom: 10px;
