--- a/css/media.css
+++ b/css/media.css
@@ -1150,7 +1150,7 @@
     margin-left: 0;
   }
   .adaptive-menu {
-    padding: 10px 17px;
+    padding: 10px 17px 26px;
   }
   .adaptive-menu__info {
     margin-bottom: 10px;
