--- a/css/media.css
+++ b/css/media.css
@@ -534,6 +534,12 @@
   .connection-info__btn--menu {
     margin-left: 0;
   }
+  .footer {
+    background: linear-gradient(162.73deg, #0042a5 6.44%, #01498b 45.77%, #002365 75.36%);
+  }
+  .footer:before {
+    background: linear-gradient(90deg, #0143a2 0%, #01449f 100%);
+  }
 }
 @media screen and (max-width: 890px) {
   .connection-info__btn {
@@ -582,9 +588,6 @@
   }
 }
 @media screen and (max-width: 820px) {
-  .footer {
-    background: linear-gradient(162.73deg, #0042a5 6.44%, #01498b 45.77%, #002365 75.36%);
-  }
   .footer-item--contact {
     text-align: center;
     margin: 0 auto 20px;
@@ -702,6 +705,10 @@
   }
 }
 @media screen and (max-width: 720px) {
+  section {
+    background-image: none;
+    background: none;
+  }
   .universities__slider .slider-item {
     width: 400px;
   }
@@ -1057,8 +1064,7 @@
     display: block;
   }
   .footer::before {
-    width: 53%;
-    background: linear-gradient(162.73deg, #0042a5 6.44%, #01498b 45.77%, #002365 75.36%);
+    width: 75%;
   }
   .footer-form__input {
     width: 100%;
@@ -1074,6 +1080,9 @@
   }
 }
 @media screen and (max-width: 570px) {
+  .title-block {
+    margin-bottom: 30px;
+  }
   .title-block__img {
     margin-bottom: 20px;
   }
@@ -1198,7 +1207,7 @@
     width: 36px;
   }
   .academic-header__title {
-    font-size: 28px;
+    font-size: 30px;
     margin-right: 0;
   }
   .academic-header__content {
@@ -1214,6 +1223,9 @@
   .subtitle-wrap .dots-img {
     margin-right: 11px;
     margin-top: 2px;
+  }
+  .benefits {
+    margin-bottom: 30px;
   }
   .feedback-item__inner {
     margin: 21px 24px 24px 24px;
@@ -1231,9 +1243,6 @@
   }
   .feedback-item__text {
     font-size: 12px;
-  }
-  .footer:before {
-    width: 33%;
   }
   .form-title,
   .telephones__link {
