--- a/less/style.less
+++ b/less/style.less
@@ -1950,7 +1950,7 @@ textarea {
 
 .footer {
     // padding-top: 65px;
-    background: linear-gradient(177.39deg, #0066FF -13.52%, #00318E 32.41%);
+    background: linear-gradient(170.81deg, #0066FF -13.52%, #00318E 32.41%);
 
     position: relative;
 &::before {
@@ -1960,14 +1960,12 @@ textarea {
     top: -30px;
     left: 50%;
     transform: translate(-50%, 0);
-
     width: 479.5px;
     height: 76.58px;
     border-radius: 30px;
-    padding: 12px 90px 17px;
-
-    background: linear-gradient(90deg, #014FCF -0.05%, #0152D4 100.05%);// background: #3DADD0;
-
+    // padding: 12px 90px 17px;
+    
+    background: linear-gradient(90deg, #014CC7 0%, #0148BF 100%);
 }
 
 }
