--- a/less/media.less
+++ b/less/media.less
@@ -702,6 +702,12 @@
     .connection-info__btn--menu {
         margin-left: 0;
     }
+    .footer {
+        background: linear-gradient(162.73deg, #0042A5 6.44%, #01498B 45.77%, #002365 75.36%);
+        &:before {
+            background: linear-gradient(90deg, #0143A2 0%, #01449F 100%);
+        }
+    }
 }
 
 
@@ -754,15 +760,14 @@
         padding: 10px 20px;
         font-size: 15px;
     }
+   
 
       
 }
 
 @media screen and (max-width: 820px) {
 
-    .footer {
-        background: linear-gradient(162.73deg, #0042A5 6.44%, #01498B 45.77%, #002365 75.36%);
-    }
+   
     .footer-item--contact {
         text-align: center;
         margin: 0 auto 20px;
@@ -915,6 +920,11 @@
 
 
 @media screen and (max-width: 720px) {
+
+    section {
+        background-image: none;
+        background: none;
+    }
     .universities__slider {
         .slider-item {
             width: 400px;
@@ -1366,8 +1376,7 @@
 
     .footer {
         &::before {
-            width: 53%;
-            background: linear-gradient(162.73deg, #0042A5 6.44%, #01498B 45.77%, #002365 75.36%);
+            width: 75%;
         }
     }
     .footer-form {
@@ -1392,8 +1401,9 @@
 
 @media screen and (max-width: 570px){
 
-
+   
     .title-block {
+        margin-bottom: 30px;
         &__img {
             margin-bottom: 20px;
         }
@@ -1540,7 +1550,7 @@
         }
        
         &__title {
-            font-size: 28px;
+            font-size: 30px;
             margin-right: 0;
         }
         &__content {
@@ -1563,6 +1573,9 @@
         margin-top: 2px;
     }
    
+    .benefits {
+        margin-bottom: 30px;
+    }
     
     .feedback-item {
         &__inner {
@@ -1589,12 +1602,6 @@
         }
     }
 
-
-    .footer {
-        &:before {
-            width: 33%;
-        }
-    }
 
     .form-title, 
     .telephones__link {
