--- a/less/style.less
+++ b/less/style.less
@@ -1422,7 +1422,9 @@ details[open] {
         box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
     }
     &__icon {
-        display: block;
+        width: 107px;
+        height: 107px;
+                display: block;
         justify-content: center;
         margin:  0 auto 10px;
         position: relative;
@@ -1965,7 +1967,9 @@ textarea {
     border-radius: 30px;
     // padding: 12px 90px 17px;
     
-    background: linear-gradient(90deg, #014CC7 0%, #0148BF 100%);
+    // background: linear-gradient(90deg, #014CC7 0%, #0148BF 100%);
+
+    background: linear-gradient(90deg, #0157DE 0%, #1B2DB3 100%);
 }
 
 }
