--- a/less/style.less
+++ b/less/style.less
@@ -1952,7 +1952,8 @@ textarea {
 
 .footer {
     // padding-top: 65px;
-    background: linear-gradient(170.81deg, #0066FF -13.52%, #00318E 32.41%);
+    // background: linear-gradient(170.81deg, #0066FF -13.52%, #00318E 32.41%);
+    background: linear-gradient(171.69deg, #0066FF -3.92%, #00318E 38.13%);
 
     position: relative;
 &::before {
@@ -1967,9 +1968,9 @@ textarea {
     border-radius: 30px;
     // padding: 12px 90px 17px;
     
-    // background: linear-gradient(90deg, #014CC7 0%, #0148BF 100%);
+    background: linear-gradient(90deg, #014CC7 0%, #0148BF 100%);
 
-    background: linear-gradient(90deg, #0157DE 0%, #1B2DB3 100%);
+    // background: linear-gradient(90deg, #0157DE 0%, #1B2DB3 100%);
 }
 
 }
