--- a/less/style.less
+++ b/less/style.less
@@ -1953,9 +1953,9 @@ textarea {
 .footer {
     // padding-top: 65px;
     // background: linear-gradient(170.81deg, #0066FF -13.52%, #00318E 32.41%);
-    background: linear-gradient(171.69deg, #0066FF -3.92%, #00318E 38.13%);
-
+    background: linear-gradient(162.73deg, #0042A5 6.44%, #01498B 45.77%, #002365 75.36%);
     position: relative;
+  
 &::before {
     content: "";
     z-index: -999999;
@@ -1966,7 +1966,7 @@ textarea {
     width: 479.5px;
     height: 76.58px;
     border-radius: 30px;
-    background: linear-gradient(90deg, #014CC7 0%, #0148BF 100%);
+    background: linear-gradient(90deg, #0143A2 0%, #01449F 100%);
 }
 
 }
