--- a/css/style.css
+++ b/css/style.css
@@ -1641,7 +1641,7 @@ textarea {
   color: #6F6F6F;
 }
 .footer {
-  background: linear-gradient(171.69deg, #0066ff -3.92%, #00318e 38.13%);
+  background: linear-gradient(162.73deg, #0042a5 6.44%, #01498b 45.77%, #002365 75.36%);
   position: relative;
 }
 .footer::before {
@@ -1654,7 +1654,7 @@ textarea {
   width: 479.5px;
   height: 76.58px;
   border-radius: 30px;
-  background: linear-gradient(90deg, #014cc7 0%, #0148bf 100%);
+  background: linear-gradient(90deg, #0143a2 0%, #01449f 100%);
 }
 .telephones {
   top: -18px;
