--- a/less/assistant.less
+++ b/less/assistant.less
@@ -519,7 +519,7 @@
         margin: 7px 0 10px;
         font-size: 10px;
         line-height: 12px;
-        color: #018FF6;
+        color: #00369C;
     }
 
     &__text {
