--- a/less/media.less
+++ b/less/media.less
@@ -575,8 +575,6 @@
         &__subtitle {
           text-align: center;
         }
-    
-     
     }
 }
 
@@ -1076,7 +1074,6 @@
         }
     
         &__subtitle {
-           
             font-size: 12px;
             margin-bottom: 15px;
         }
@@ -1085,6 +1082,7 @@
             grid-area: title;
             font-size: 14px;
             color: #6F6F6F;
+            text-align: justify;
         }
     
     }
