--- a/css/assistans-media.css
+++ b/css/assistans-media.css
@@ -1,3 +1,8 @@
+@media screen and (max-width: 1600px) {
+  .header-slider__mail-title {
+    margin-top: 50px;
+  }
+}
 @media screen and (max-width: 1570px) {
   .rectangle-decorate-block {
     top: -156px;
@@ -58,9 +63,6 @@
   }
   .header-slider__block {
     margin-top: 80px;
-  }
-  .header--sticky .logo--header img {
-    position: static;
   }
   .header-decorate {
     right: 55%;
@@ -179,6 +181,7 @@
   }
   .header-slider__mail-title {
     font-size: 36px;
+    margin-top: 0;
   }
   .header-slider__subtitle {
     font-size: 12.5px;
@@ -334,11 +337,13 @@
     bottom: -84px;
   }
   .btn--header-slider {
-    display: block;
+    position: relative;
+    display: flex;
     margin: 16px auto;
     width: 95px;
     padding: 7px 13px;
     font-size: 12px;
+    left: -18px;
   }
   .quick-navigation,
   .about-form,
