--- a/css/assistant.css
+++ b/css/assistant.css
@@ -448,7 +448,7 @@
   margin: 7px 0 10px;
   font-size: 10px;
   line-height: 12px;
-  color: #018FF6;
+  color: #00369C;
 }
 .comment-item__text {
   font-size: 14px;
