--- a/css/assistant.css
+++ b/css/assistant.css
@@ -311,20 +311,12 @@
   font-weight: bold;
   color: #0031C4;
 }
-.admission-form__link:hover {
-  left: 18px;
+.admission-form__item:hover::before {
+  content: url('../img/icons/hoverFormItem.svg');
+}
+.admission-form__item:hover .admission-form__link {
   color: #343434;
   border-bottom: 2px solid #343434;
-}
-.admission-form__link::before {
-  content: url(../img/icons/menu-item-arr-decor.svg);
-  top: 0;
-  display: none;
-  position: absolute;
-  left: -18px;
-}
-.admission-form__link:hover:before {
-  display: block;
 }
 .comments-section {
   position: relative;
