--- a/less/media.less
+++ b/less/media.less
@@ -918,11 +918,14 @@
 
 
 @media screen and (max-width: 720px) {
-
-    section {
-        background-image: none;
+    .universities,
+    .courses, 
+    .benefits,
+    .gallery,
+    .feedback{
         background: none;
     }
+
     .universities__slider {
         .slider-item {
             width: 400px;
@@ -1052,7 +1055,7 @@
         }
     
         &__headers {
-            flex-basis: 47%;
+            flex-basis: 51%;
         }
         &__info {
            display: flex;
@@ -1306,7 +1309,7 @@
          display: flex;
          left: 50%;
          transform: translate(-50%, 0);
-         bottom: 66px;
+         bottom: 69px;
         }
          &--courses{
              margin: auto;
@@ -1316,10 +1319,13 @@
              display: flex;
              left: 50%;
              transform: translate(-50%, 0);
-             bottom: 66px;
+             bottom: 69px;
          }
-        
      }
+
+     .slider-item__btn {
+        padding: 9px 22px;
+    }
      .benefits-items{
         display: flex;
      }
@@ -1596,7 +1602,7 @@
             margin-bottom: 15px;
         }
         &__text {
-            font-size: 12px;
+            font-size: 11px;
         }
     }
 
@@ -1646,6 +1652,9 @@
     .feedback-slider-mobile {
         display: block;
     }
+    .feedback-item__line {
+        margin: 5px 0;
+    }
     .feedback-slider {
         border: 3px solid #0031C4;
 
@@ -1666,7 +1675,8 @@
 
 @media screen and (max-width: 400px) {
     .connection-info__btn{
-        padding: 7px;
+        padding: 7px 16px;
+        font-size: 14px;
     }
 }
 
