--- a/less/style.less
+++ b/less/style.less
@@ -29,6 +29,14 @@ button {
     border: none;
 }
 
+input[type="submit"] {
+    cursor: pointer;
+} 
+
+button {
+    cursor: pointer;
+}
+
 
 .container{
     max-width: 1080px;
